# Learning_Rust

./: .gitignore  Cargo.toml  readme.md
01-basic/: Cargo.toml
01-basic/src/: main
02-data_types_and_structures/: Cargo.toml  readme.md
02-data_types_and_structures/01-scalar/: main.rs
02-data_types_and_structures/03-structs/: 01-structs.rs
02-data_types_and_structures/04-enums/: 02-enum_matching.rs
03-functions/: 02-parameter_passing.rs  03-return_values.rs  04-ownership_and_functions.rs  Cargo.toml  readme.md
04-control_flow_constructs/: 01-if-else.rs  02-loops.rs  03-iterations.rs  04-pattern_matching.rs  Cargo.toml  readme.md
05-error_handlings/: 01-fundamentals.rs  02-result_type.rs  03-option_type.rs  04-error_destructuring.rs  05-panic_macro.rs  Cargo.toml
06-functions_in_depth/: 01-basics.rs  02-ownership.rs  03-borrowing.rs  04-returning_values_and_ownership.rs  05-closure.rs  06-capturing_the_environment.rs  07-move_keyword.rs  Cargo.toml
07-practice_questions/: Cargo.toml
07-practice_questions/src/: ch01_basic.rs  ch02_data_types.rs  ch03_functions.rs  ch04_control_flow.rs  ch05_error_handling.rs  ch06_functions_in_depth.rs
08-ownership-borrowing-and-reference/: 01-clone_trait.rs  02-rules_of_ownership.rs  Cargo.toml
chapter-02/: Cargo.toml
chapter-02/src/data_types_and_structures/02-compound/: 01-tuple.rs  02-arrays.rs  03-slices.rs  04-strings.rs
chapter-02/src/data_types_and_structures/03-structs/: 02-initialization_and_update.rs  03-methods_and_associated_fn.rs
chapter-02/src/data_types_and_structures/04-enums/: 01-enums.rs  03-methods.rs
chapter-03/: Cargo.toml
chapter-03/src/functions/: 01-functions.rs
