[package]
name    = "chapter-06"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "basics"
path = "01-basics.rs"

[[bin]]
name = "ownership_in_functions"
path = "02-ownership.rs"

[[bin]]
name = "borrowing_in_functions"
path = "03-borrowing.rs"

[[bin]]
name = "returning_values_and_ownerships"
path = "04-returning_values_and_ownership.rs"
